--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -75,7 +75,7 @@ content_api:
         С помощью предоставленного %jsLink% и простейшей интеграции вы получите уже готовый, нейтрально стилизованный
         виджет для встраивания на любую страницу вашего сайта. В случае, если версия браузера посетителя устарела,
         виджет покажет себя и предложит обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться
-        от обновления, и он больше не увидит виджет при просмотре вашего сайта.
+        от обновления, и он больше не увидит виджет при просмотре вашего сайта
       step:
         1: >
           Вставьте зарезервированный для вывода блок сразу после открывающего тега <body> на странице,
@@ -83,29 +83,29 @@ content_api:
         2: >
           Подключите файл скрипта и его инициализацию перед закрывающим тегом </body> на той же странице
         3: >
-          Укажите последним параметром ссылки в инициализации скрипта нужный вам язык,
-          который поддерживает Br.Asst., например
+          Укажите последним параметром ссылки в инициализации скрипта нужный вам язык, который поддерживает
+          Br.Asst., например
     json:
       title: Необходимые данные в формате JSON
       text: >
-        Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный запрос
-        GET-запрос по адресу https://brasst.com/api/{locale}, где {locale} - нужный вам язык перевода для ошибок
-        и предупреждений, который поддерживает Br.Asst. Также укажите дополнительный GET-параметр 'type=json'.
-        Полученный объект будет иметь примерно следующий вид
+        Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный GET-запрос по
+        адресу https://brasst.com/api/{locale}, где {locale} - нужный вам язык перевода для ошибок и предупреждений,
+        который поддерживает Br.Asst. Также укажите дополнительный GET-параметр 'type=json'. Полученный объект будет
+        иметь примерно следующий вид
     additional: >
-      Если вы испытываете затруднения со встраиванием HTML виджета или кросс-доменным запросом для JSON,
+      Если вы испытываете затруднения со встраиванием HTML-виджета или кросс-доменным запросом для JSON,
       пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
   github: Примеры использования на GitHub
 
 user_error_is_bot: >
-  Жаль, но определить ваш браузер не удалось, так как, скорее всего, вы - бот
+  Жаль, но определить ваш браузер не удалось, так как, скорее всего вы - бот
 user_error_is_mobile: >
-  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства.
+  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства
 user_error_not_browser: >
   Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не браузер
 
 user_warning_unsupported_browser: >
-  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о последней версии вашего
+  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать касательно последней версии вашего
   или предложить обновление
 user_warning_unsupported_os: >
   Браузер, который вы используете, официально не поддерживается вашей операционной системой. Зачем пользоваться
