--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -68,45 +68,45 @@ content_api:
     були в курсі версії свого браузера, мали можливість буквально у 3 кліка оновити її та побачити ваші проекти
     такими, якими вони мають бути - приєднуйтесь!
   guide:
-    title: Вы можете получить данные в удобном для себя формате
+    title: Ви можете отримати дані в зручному для себе форматі
     html:
-      title: Готовый HTML-виджет
+      title: Готовий HTML-віджет
       text: >
-        С помощью предоставленного %jsLink% и простейшей интеграции вы получите уже готовый, нейтрально стилизованный
-        виджет для встраивания на любую страницу вашего сайта. В случае, если версия браузера посетителя устарела,
-        виджет покажет себя и предложит обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться
-        от обновления, и он больше не увидит виджет при просмотре вашего сайта.
+        За допомогою наданого %jsLink% та найпростішої інтеграції ви отримаєте вже готовий, нейтрально стилізований
+        віджет для вбудовування на будь-яку сторінку вашого сайту. У випадку, якщо версія браузера користувача
+        застаріла, віджет покаже себе та запропонує оновлення. Не бійтеся здатися нав'язливим: варто користувачу
+        відмовитись від оновлення, і він більше не побачить віджет при перегляді вашого сайту
       step:
         1: >
-          Вставьте зарезервированный для вывода блок сразу после открывающего тега <body> на странице,
-          которая должна отображать виджет
+          Вставте зарезервований для виводу блок одразу після відкриваючого тега <body> на сторінці, що має
+          відображати віджет
         2: >
-          Подключите файл скрипта и его инициализацию перед закрывающим тегом </body> на той же странице
+          Підключіть файл скрипта та його ініціалізацію перед закриваючим тегом </body> на тій же сторінці
         3: >
-          Укажите последним параметром ссылки в инициализации скрипта нужный вам язык,
-          который поддерживает Br.Asst., например
+          Вкажіть останнім параметром посилання в ініціалізації скрипта потрібну вам мову, яку підтримує
+          Br.Asst., наприклад
     json:
-      title: Необходимые данные в формате JSON
+      title: Необхідні дані в форматі JSON
       text: >
-        Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный запрос
-        GET-запрос по адресу https://brasst.com/api/{locale}, где {locale} - нужный вам язык перевода для ошибок
-        и предупреждений, который поддерживает Br.Asst. Также укажите дополнительный GET-параметр 'type=json'.
-        Полученный объект будет иметь примерно следующий вид
+        Ви можете самостійно стилізувати дані, отримані у форматі JSON через крос-доменний GET-запит за адресою
+        https://brasst.com/api/{locale}, де {locale} - потрібна вам мова перекладу для помилок та повідомлень, яку
+        підтримує Br.Asst. Також вкажіть додатковий GET-параметр 'type=json'. Отриманий об'єкт буде мати приблизно
+        наступний вигляд
     additional: >
-      Если вы испытываете затруднения со встраиванием HTML виджета или кросс-доменным запросом для JSON,
-      пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
-  github: Примеры использования на GitHub
+      Якщо у вас виникають труднощі зі вбудовуванням HTML-віджету або крос-доменним запитом для JSON,
+      будь ласка, ознайомтеся з детальним описом параметрів й прикладами у нашому репозиторії на GitHub
+  github: Приклади використання на GitHub
 
 user_error_is_bot: >
-  Жаль, но определить ваш браузер не удалось, так как, скорее всего, вы - бот
+  Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все ви - бот
 user_error_is_mobile: >
-  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства.
+  Шкода, але визначити ваш браузер не вдалося, оскільки ми поки що не підтримуєио мобільні пристрої
 user_error_not_browser: >
-  Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не браузер
+  Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все, ваш клієнт - не браузер
 
 user_warning_unsupported_browser: >
-  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о последней версии вашего
-  или предложить обновление
+  Шкода, але поки що ми підтримуємо тільки основні браузери, і не можемо нічого сказати стосовно останньої версії
+  вашого або запропонувати оновлення
 user_warning_unsupported_os: >
-  Браузер, который вы используете, официально не поддерживается вашей операционной системой. Зачем пользоваться
-  программой, от которой отказались её создатели? Самое время скачать и установить другой браузер!
+  Браузер, що ви використовуєте, офіційно не підтримується вашою операційною системою. Навіщо користуватись програмою,
+  від якої відмовились її творці? Саме час завантажити й встановити інший браузер!
