--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -18,7 +18,7 @@ message:
     text: >
       На данный момент это новейшая версия браузера
   explorer: >
-    Ох... Internet Explorer, хоть и по определенным причинам является популярным браузером, очень часто не позволяет
+    Ох... Internet Explorer, хоть и по определенным причинам является популярным браузером, часто не позволяет
     пользователям в полной мере оценить работу разработчиков сайтов. Этого можно и не делать, но в некоторых случаях мы
     рекомендуем установить другой браузер, который, скорее всего, лучше справится с поставленными задачами и сделает
     вашу работу и развлечения в сети более комфортными
@@ -62,7 +62,7 @@ content_idea:
     популярных на сегодняшний день.
 
 content_api:
-  title: Вы можете использовать Br.Asst. на своих сайтах!
+  title: Вы можете использовать Br.Asst. для своих сайтов!
   text: >
     Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
     всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
@@ -85,6 +85,8 @@ content_api:
         3: >
           Укажите последним параметром ссылки в инициализации скрипта нужный вам язык, который поддерживает
           Br.Asst., например
+        final: >
+          Готово!
     json:
       title: Необходимые данные в формате JSON
       text: >
@@ -102,7 +104,7 @@ user_error_is_bot: >
 user_error_is_mobile: >
   Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства
 user_error_not_browser: >
-  Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не браузер
+  Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не веб-браузер
 
 user_warning_unsupported_browser: >
   Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать касательно последней версии вашего
