--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -18,7 +18,7 @@ message:
     text: >
       На даний момент це найбільш нова версія браузеру
   explorer: >
-    Ох... Internet Explorer, хоч і з певних причин є популярним браузером, дуже часто не дозволяє користувачам у повній
+    Ох... Internet Explorer, хоч і з певних причин є популярним браузером, часто не дозволяє користувачам у повній
     мірі оцінити роботу розробників сайтів. Цього можна і не робити, але в деяких випадках ми рекомендуємо встановити
     інший браузер, який, скоріш за все, краще виконає поставлені задачі та зробить вашу роботу та розваги в мережі
     більш комфортними
@@ -32,7 +32,7 @@ tooltip:
     й дані про роботу (більшість сучасних браузерів пропонують таку опіцію)
 
 content_slogan:
-  headline: Тількі свіжі браузери з Br.Asst.
+  headline: Тільки свіжі браузери з Br.Asst.
   subheadline: >
     Інструмент перевірки та оновлення вашого веб-браузеру
 
@@ -42,7 +42,7 @@ browser:
   stable_release:
     Поточна версія
   button_download:
-    Скачать
+    Скачати
   button_official_page:
     на сайті розробника
   os:
@@ -53,16 +53,16 @@ content_idea:
     Навіщо вам потрібен Br.Asst.?
   text: >
     Незважаючи на те, що браузери навчились оновлювати себе не відволікаючи людей від справ, багато хто і сьогодні
-    використовує застарілі версії подібних програмЦе призводить до того, що для власників старих браузерів сайти та
+    використовує застарілі версії подібних програм. Це призводить до того, що для власників старих браузерів сайти та
     системи в мережі будуть працювати та виглядати не так, як це було задумано їх творцями. Не варто псувати собі
     враження - краще завжди використовувати останні версії браузерів!
   about: >
     Ми, веб-агентство CHEERS! Unlimited, розробили Br.Asst. з метою турботи про наших клієнтів і користувачів.
     Br.Asst. допоможе вам дізнатися, чи не застарів ваш браузер, а також завантажити останню версію будь-якого з
-    найбільш популярних на сьогодняшній день.
+    найбільш популярних на сьогоднішній день.
 
 content_api:
-  title: Ви можете використовувати Br.Asst. на своїх сайтах!
+  title: Ви можете використовувати Br.Asst. для своїх сайтів!
   text: >
     Ми надаємо безкоштовне та просте API для розробників та веб-майстрів. Якщо ви хочете, щоб ваші користувачі завжди
     були в курсі версії свого браузера, мали можливість буквально у 3 кліка оновити її та побачити ваші проекти
@@ -85,6 +85,8 @@ content_api:
         3: >
           Вкажіть останнім параметром посилання в ініціалізації скрипта потрібну вам мову, яку підтримує
           Br.Asst., наприклад
+        final: >
+          Готово!
     json:
       title: Необхідні дані в форматі JSON
       text: >
@@ -100,9 +102,9 @@ content_api:
 user_error_is_bot: >
   Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все ви - бот
 user_error_is_mobile: >
-  Шкода, але визначити ваш браузер не вдалося, оскільки ми поки що не підтримуєио мобільні пристрої
+  Шкода, але визначити ваш браузер не вдалося, оскільки ми поки що не підтримуємо мобільні пристрої
 user_error_not_browser: >
-  Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все, ваш клієнт - не браузер
+  Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все, ваш клієнт - не веб-браузер
 
 user_warning_unsupported_browser: >
   Шкода, але поки що ми підтримуємо тільки основні браузери, і не можемо нічого сказати стосовно останньої версії
