--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -86,14 +86,21 @@ content_api:
           Укажите последним параметром ссылки в инициализации скрипта нужный вам язык, который поддерживает
           Br.Asst., например
         final: >
-          Готово!
+          Это все!
     json:
       title: Необходимые данные в формате JSON
       text: >
-        Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный GET-запрос по
-        адресу https://brasst.com/api/{locale}, где {locale} - нужный вам язык перевода для ошибок и предупреждений,
-        который поддерживает Br.Asst. Также укажите дополнительный GET-параметр 'type=json'. Полученный объект будет
-        иметь примерно следующий вид
+        Вы можете получить только сами данные и использовать их по собственному усмотрению. Объект будет содержать
+        информацию, которую удалось собрать из User-Agent пользователя, а также данные о версии браузера клиента и
+        ее соответствия наиболее новой версии. В случае, если браузер не распознан или не поддерживается на операцонной
+        системе пользователя, в дополнение мы передаем идентефикатор предупреждения
+      step:
+        1: >
+          Для того, чтобы получить ответ от Br.Asst. в формате JSON, необходимо сделать кросс-доменный GET-запрос по
+          адресу https://brasst.com/api/{locale} c дополнительным GET-параметром 'type=json'. Последний параметр ссылки
+          {locale} - нужный вам язык перевода для ошибок и предупреждений, который поддерживает Br.Asst, например
+        2: >
+          Полученный объект будет иметь примерно следующий вид:
     additional: >
       Если вы испытываете затруднения со встраиванием HTML-виджета или кросс-доменным запросом для JSON,
       пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
