--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -25,8 +25,8 @@ message:
 
 tooltip:
   wrong_browser: >
-    Возможно, Br.Asst. ошибся, и на самом деле вы используете другой браузер, или другую его версию. В этом случае мы будем весьма благодарны,
-    если вы оставите для нас отзыв
+    Возможно, Br.Asst. ошибся, и на самом деле вы используете другой браузер, или другую его версию. В этом случае мы
+    будем весьма благодарны, если вы оставите для нас отзыв
   uninstall_browser: >
     Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
     и данные о работе (большинство современных браузеров предлагают такую опцию)
@@ -90,10 +90,10 @@ content_api:
     json:
       title: Необходимые данные в формате JSON
       text: >
-        Вы можете получить только сами данные и использовать их по собственному усмотрению. Объект будет содержать
+        Вы можете получить только нужные данные и использовать их по собственному усмотрению. Объект будет содержать
         информацию, которую удалось собрать из User-Agent пользователя, а также данные о версии браузера клиента и
-        ее соответствия наиболее новой версии. В случае, если браузер не распознан или не поддерживается на операцонной
-        системе пользователя, в дополнение мы передаем идентефикатор предупреждения
+        ее соответствии наиболее новой версии. В случае, если браузер не распознан или не поддерживается на операцонной
+        системе пользователя, в дополнение мы передадим текстовый идентефикатор предупреждения
       step:
         1: >
           Для того, чтобы получить ответ от Br.Asst. в формате JSON, необходимо сделать кросс-доменный GET-запрос по
