--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -90,10 +90,17 @@ content_api:
     json:
       title: Необхідні дані в форматі JSON
       text: >
-        Ви можете самостійно стилізувати дані, отримані у форматі JSON через крос-доменний GET-запит за адресою
-        https://brasst.com/api/{locale}, де {locale} - потрібна вам мова перекладу для помилок та повідомлень, яку
-        підтримує Br.Asst. Також вкажіть додатковий GET-параметр 'type=json'. Отриманий об'єкт буде мати приблизно
-        наступний вигляд
+        Ви можете отримати тільки необхідні дані та використовувати їх на власний розсуд. Об'єкт буде містити
+        інформацію, яку вдалось зібрати з User-Agent користувача, а також дані про версію браузеру клієнта та її
+        відповідність найбільш новій версії. У випадку, якщо браузер не розпізнаний або не підтримується на операційній
+        системі користувача, ми додатково передамо текстовий ідентифікатор попередження
+      step:
+        1: >
+          Для того, щоб отримати відповідь від Br.Asst. у форматі JSON, необхідно мати крос-доменний GET-запит за
+          адресою https://brasst.com/api/{locale} з додатковим GET-параметром 'type=json'. Останній параметр посилання
+          {locale} - необхідна вам мова перекладу для помилок та попереджень, яку підтримує Br.Asst, наприклад
+        2: >
+          Отриманий об'єкт буде мати приблизно наступний вигляд:
     additional: >
       Якщо у вас виникають труднощі зі вбудовуванням HTML-віджету або крос-доменним запитом для JSON,
       будь ласка, ознайомтеся з детальним описом параметрів й прикладами у нашому репозиторії на GitHub
