--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -86,7 +86,7 @@ content_api:
           Укажите последним параметром ссылки в инициализации скрипта нужный вам язык, который поддерживает
           Br.Asst., например
         final: >
-          Это все!
+          Готово!
     json:
       title: Необходимые данные в формате JSON
       text: >
