--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -92,8 +92,8 @@ content_api:
       text: >
         Вы можете получить только нужные данные и использовать их по собственному усмотрению. Объект будет содержать
         информацию, которую удалось собрать из User-Agent пользователя, а также данные о версии браузера клиента и
-        ее соответствии наиболее новой версии. В случае, если браузер не распознан или не поддерживается на операцонной
-        системе пользователя, в дополнение мы передадим текстовый идентефикатор предупреждения
+        ее соответствии наиболее новой версии. В случае, если браузер не распознан или не поддерживается на операционной
+        системе пользователя, в дополнение мы передадим текстовый идентификатор предупреждения
       step:
         1: >
           Для того, чтобы получить ответ от Br.Asst. в формате JSON, необходимо сделать кросс-доменный GET-запрос по
